Implementaçao do front para listar Emendas Parlamentares

--- a/frontend/app/components/nav-bar.hbs
+++ b/frontend/app/components/nav-bar.hbs
@@ -3,8 +3,8 @@
     <h1>Transparencia Brasil</h1>
   </LinkTo>
   <div class="links">
-    <LinkTo @route="bolsa-familia" class="menu-about">
-      Bolsa Familia
+    <LinkTo @route="record" class="menu-about">
+      Emendas Parlamentares
     </LinkTo>
   </div>
 </nav>
