--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <Jumbo>
     <h2>Transparencia Brasil</h2>
     <p>A Transpar&ecirc;ncia Brasil (TB) &eacute; uma organiza&ccedil;&atilde;o independente e aut&ocirc;noma brasileira, que tem como principal objetivo a luta contra a corrup&ccedil;&atilde;o no Brasil.</p>
-    <LinkTo @route="bolsa-familia" class="button">Bolsa Familia</LinkTo>
+    <LinkTo @route="record" class="button">Emendas Parlamentares</LinkTo>
 </Jumbo>
