Adição do campo valor empenhado

--- a/frontend/app/components/record.hbs
+++ b/frontend/app/components/record.hbs
@@ -5,7 +5,10 @@
       <span>Ano:</span> {{@model.ano}}
     </div>
     <div class="detail value">
-      <span>Author:</span> R$ {{@model.autor}}
+      <span>Author:</span> {{@model.autor}}
+    </div>    
+	<div class="detail value">
+      <span>Valor Empenhado:</span> {{@model.valorEmpenhado}}
     </div>
   </div>
 </article>
